--- a/photographerPage.html
+++ b/photographerPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -9,11 +9,13 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html">
+        <img src="assets/images/logo.png" class="logo" />
+      </a>
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+      <div class="photographer_header">
+        
       </div>
     </main>
     <div id="contact_modal">
@@ -31,7 +33,10 @@
 				</form>
 			</div>
 		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+    <script src="scripts/API/Api.js"></script>
+    <script src="scripts/factories/photographer.js"></script>
+    <script src="scripts/factories/TemplatePhotographerCard.js"></script>
+    <script src="scripts/pages/photographerPage.js"></script>
+    <script src="scripts/utils/contactForm.js"></script>
   </body>
 </html>
