--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <link href="css/photographer.css" rel="stylesheet" type="text/css" />
+    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Fisheye - photographe </title>
   </head>
   <body>
@@ -45,8 +46,8 @@
     <script src="/scripts/factories/TemplatePhotographerCard.js"></script>
     
     <script src="/scripts/factories/mediaCard.js"></script>
-    <script src="/scripts/models/mediaImg.js"></script>
-    <script src="/scripts/models/mediaVideo.js"></script>
+    <script src="/scripts/models/ImageFactory.js"></script>
+    <script src="/scripts/models/VideoFactory.js"></script>
     <script src="/scripts/pages/photographerPage.js"></script>
     <script src="/scripts/factories/mediaFactory.js"></script> 
     <script src="/scripts/models/lightboxTemplate.js"></script>   
