--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -18,6 +18,7 @@
     <main id="main">
       <div class="photographer_header"></div>
       <section class="medias_section"></section>
+      <div class="total_likes"
     </main>
     <div id="contact_modal">
 			<div class="modal">
@@ -44,7 +45,7 @@
     <script src="/scripts/models/ImageFactory.js"></script>
     <script src="/scripts/models/VideoFactory.js"></script>
     <script src="/scripts/models/lightboxTemplate.js"></script>
-    <script src="/scripts/utils/lightbox.js"></script>
+    <script src="/scripts/utils/lightbox.js"></script>    
     <script src="/scripts/pages/photographerPage.js"></script>
     
     <script src="/scripts/factories/mediaFactory.js"></script> 
