--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -18,7 +18,7 @@
     <main id="main">
       <div class="photographer_header"></div>
       <section class="medias_section"></section>
-      <div class="total_likes"
+      
     </main>
     <div id="contact_modal">
 			<div class="modal">
@@ -28,8 +28,13 @@
         </header>
 				<form>
 					<div>
-						<label>Prénom</label>
+						<label class="fields">Prénom</label>
 						<input />
+            <label class="fields">Nom</label>
+            <input <label class="fields"><label>E-mail</label>
+            <input />
+            <label class="fields">Votre message</label>
+            <input class="msg"/>
 					</div>
           <button class="contact_button">Envoyer</button>
 				</form>
