--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -24,6 +24,7 @@
 			<div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
+          <h2 class="photographer_name"></h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
 				<form>
@@ -36,7 +37,7 @@
             <label class="fields">Votre message</label>
             <input class="msg"/>
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <button class="send_button">Envoyer</button>
 				</form>
 			</div>
 		</div>
