--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -17,7 +17,15 @@
     </header>
     <main id="main">
       <div class="photographer_header"></div>
-      <section class="medias_section"></section>
+      <div class="filter">
+        <p class="select_label">Trier par</p>
+        <select name="catégorie" class="filter_portfolio">
+          <option class= "filterlist" selected value="Popularité">Popularité</option>
+          <option class= "filterlist" value="Date">Date</option>
+          <option class= "filterlist" value="Prix">Prix</option>
+        </select>
+      </div>  
+      <section id ="medias_section" class="medias_section"></section>
       
     </main>
     <div id="contact_modal">
