--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -22,7 +22,7 @@
         <select name="catégorie" class="filter_portfolio">
           <option class= "filterlist" selected value="Popularité">Popularité</option>
           <option class= "filterlist" value="Date">Date</option>
-          <option class= "filterlist" value="Prix">Prix</option>
+          <option class= "filterlist" value="Titre">Titre</option>
         </select>
       </div>  
       <section id ="medias_section" class="medias_section"></section>
