LAST CSS adjustements
LAST CSS adjustements

--- a/Public/photographerPage.html
+++ b/Public/photographerPage.html
@@ -41,7 +41,7 @@
 						<input class="saisie" aria-label="saisie Prénom"/>
             <label class="fields">Nom</label>
             <input class="saisie" aria-label="saisie Nom"/>
-            <label class="fields"><label>E-mail</label>
+            <label class="fields">E-mail</label>
             <input class="saisie" aria-label="saisie Mail"/>
             <label class="fields">Votre message</label>
             <input class="saisie_msg" aria-label="saisie Prénom"/>
