Corrections générales after soutenance
Corrections générales after soutenance

--- a/Public/index.html
+++ b/Public/index.html
@@ -16,8 +16,8 @@
         <div class="photographer_section"></div>
     </main>
     <script src="/scripts/API/Api.js" type="module"></script>
-    <script src="/scripts/models/photographer.js"></script>
-    <script src="/scripts/factories/TemplatePhotographerCard.js"></script>
+    <script src="/scripts/models/photographer.js" type ="module"></script>
+    <script src="/scripts/factories/TemplatePhotographerCard.js" type="module"></script>
     <script src="/scripts/pages/index.js" type="module"></script>
     
     
