--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./Public/css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="shortcut icon" href="#">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <img src="assets/images/logo.png" class="logo" />
+        <img src="./Public/assets/images/logo.png" class="logo" />
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
