--- a/photographerPage.html
+++ b/photographerPage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
-    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+    <link href="./Public/css/photographer.css" rel="stylesheet" type="text/css" />
+    <link href="./Public/css/lightbox.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="./Public/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Fisheye - photographe </title>
@@ -12,7 +12,7 @@
   <body>
     <header aria-hidden="false">
       <a href="index.html">
-        <img src="assets/images/logo.png" class="logo" alt="logo Fisheye"/>
+        <img src="./Public/assets/images/logo.png" class="logo" alt="logo Fisheye"/>
       </a>
     </header >
     <main id="main">
@@ -33,7 +33,7 @@
 				<header arie-label="Contactez-moi">
           <h2>Contactez-moi</h2>
           <h2 class="photographer_name" aria-label="Nom du photographe"></h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" alt="close" />
+          <img src="./Public/assets/icons/close.svg" onclick="closeModal()" alt="close" />
         </header>
 				<form>
 					<div>
